--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@mui/material-nextjs": "^6.4.3",
+    "intersection-observer": "^0.12.2",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
